# ultra

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: build-image.yml
deploy/profile.d/: ultra-setup.sh
deploy/scripts/: homeassistant-container.sh  preload-embed-model.py  ultra-expand-root
deploy/systemd/: ultra-embed-preload.service  ultra-expand-root.service  ultra-homeassistant-pull.service  ultra-homeassistant.service  ultra-memory-embed.service  ultra-memory-embed.timer  ultra-setup.service  ultra-tasks.service  ultra-tasks.timer
docs/: ARCHITECTURE.md  BUILD.md  CONFIGURATION.md  MEMORY.md  PERSONALITY.md  ROADMAP.md  SMART_HOME.md
iso/: build.sh  config.sh
iso/overlay/etc/: issue  issue.net  motd  os-release
iso/scripts/: chroot-setup.sh
src/ultra/: __init__.py  __main__.py  agent.py  audit.py  cli.py  config.py  discover.py  homeassistant.py  menu.py  notify.py  personality.py  personality_wizard.py  prompts.py  scheduler.py  setup.py  tools.py
src/ultra/llm/: anthropic.py  base.py  factory.py  openai.py
src/ultra/memory/: __init__.py  embed.py  recall.py  service.py  store.py
tasks/: disk-monitor.yaml  evening-lights.yaml  morning-briefing.yaml
templates/smart-home/: README.md
