[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra"
version = "0.1.0"
description = "AI-driven OS orchestrator agent — Linux Ultra"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "fastembed>=0.4.2",
    "zeroconf>=0.131.0",
]

[project.scripts]
ultra = "ultra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
